cargo-features = ["per-package-target"]

[package]
name = "neko-kernel"
version = "0.0.1"
edition = "2021"
authors = ["NekoOS Group"]
license = "GPL3.0"
rust-version = "1.80"
description = "qwq"
default-target = "riscv64gc-unknown-none-elf"

[dependencies]
bitflags = "*"
bitmaps = { version = "*", default-features = false}
buddy_system_allocator = { version = "*", features = ["const_fn"]}
fdt = "*"
log = "*"
naive-timer = "*"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
spin = "*"
