cargo-features = ["per-package-target"]

[package]
name = "neko-ulib"
version = "0.1.0"
edition = "2021"
default-target = "riscv64gc-unknown-none-elf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
test = false
doctest = false
bench = false